--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -1,74 +1,70 @@
 {% load i18n staticfiles raw %}
 <!DOCTYPE html>
 <html>
+  <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+      <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+      
+      <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet" media="screen">
+      <link href="{{ STATIC_URL }}css/font-awesome.css" rel="stylesheet" media="screen">
+      <link href="{{ STATIC_URL }}css/settings.css" rel="stylesheet" media="screen">
+      <link href="{{ STATIC_URL }}css/owl.carousel.css" rel="stylesheet" media="screen">
+      <link href="{{ STATIC_URL }}css/owl.theme.css" rel="stylesheet" media="screen">
+      <link href="{{ STATIC_URL }}css/uniform.default.css" rel="stylesheet" media="screen">
+      <link href="{{ STATIC_URL }}css/theme.default.css" rel="stylesheet" media="screen">
+      <link href="{{ STATIC_URL }}css/style.css?v=6" rel="stylesheet" media="screen">
+      {% block styles %}{% endblock %}
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+      <script src="{{ STATIC_URL }}js/bootstrap.js"></script>
+      <script src="{{ STATIC_URL }}js/jquery.themepunch.plugins.min.js"></script>
+      <script src="{{ STATIC_URL }}js/jquery.themepunch.revolution.min.js"></script>
+      <script src="{{ STATIC_URL }}js/revo-slider-init.js"></script>
+      <script src="{{ STATIC_URL }}js/owl.carousel.min.js"></script>
+      <script src="{{ STATIC_URL }}js/jquery.appear.js"></script>
+      <script src="{{ STATIC_URL }}js/jqury.countTo.js"></script>
+      <script src="{{ STATIC_URL }}js/moment.js"></script>
+      <script src="{{ STATIC_URL }}js/bootstrap-datetimepicker.js"></script>
+      <script src="{{ STATIC_URL }}js/jquery.uniform.min.js"></script>
+      <script src="{{ STATIC_URL }}js/jquery.tablesorter.js"></script>
+      <script src="{{ STATIC_URL }}js/jquery.slimscroll.js"></script>
+      <script src="{{ STATIC_URL }}js/theme_scripts.js"></script>
+      {% block scripts %}{% endblock %}
+      <title>{% block pagetitle %}{% endblock %}</title>
+  </head>
+  <body>
+  <div class="wrap">
+  <section id="pre-header">
+      <div class="container">
+          <div class="row">
+              <!-- BEGIN TOP BAR LEFT PART -->
+              <div class="col-md-6 col-sm-6 additional-info">
+                  <ul>
+                      <li><i class="fa fa-phone"></i><span>+1 907 331 4392</span></li>
+                      <li><i class="fa fa-envelope-o"></i><span>info@mywriters.com</span></li>
+                  </ul>
+              </div>
+              <!-- END TOP BAR LEFT PART -->
+              <!-- BEGIN TOP BAR MENU -->
+              <div class="col-md-6 col-sm-6 additional-nav">
+                  <ul class="pull-right">
+                      {% if user.username %}  
+                      <li><a href="{% url 'task_list' %}">My Orders</a></li>
+                      <li><a href="{% url 'logout' %}">Exit</a></li>
+                      {% else %}
+                      <li><a href="{% url 'login' %}">Log In</a></li>
+                      <li><a href="{% url 'user_new' %}">Registration</a></li>
+                      {% endif %}
+                 </ul>
 
-    <head>    
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-        
-        <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet" media="screen">
-        <link href="{{ STATIC_URL }}css/font-awesome.css" rel="stylesheet" media="screen">
-        <link href="{{ STATIC_URL }}css/settings.css" rel="stylesheet" media="screen">
-        <link href="{{ STATIC_URL }}css/owl.carousel.css" rel="stylesheet" media="screen">
-        <link href="{{ STATIC_URL }}css/owl.theme.css" rel="stylesheet" media="screen">
-        <link href="{{ STATIC_URL }}css/uniform.default.css" rel="stylesheet" media="screen">
-        <link href="{{ STATIC_URL }}css/theme.default.css" rel="stylesheet" media="screen">
-        <link href="{{ STATIC_URL }}css/style.css?v=6" rel="stylesheet" media="screen">
-{% block styles %}{% endblock %}
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="{{ STATIC_URL }}js/bootstrap.js"></script>
-        <script src="{{ STATIC_URL }}js/jquery.themepunch.plugins.min.js"></script>
-        <script src="{{ STATIC_URL }}js/jquery.themepunch.revolution.min.js"></script>
-        <script src="{{ STATIC_URL }}js/revo-slider-init.js"></script>
-        <script src="{{ STATIC_URL }}js/owl.carousel.min.js"></script>
-        <script src="{{ STATIC_URL }}js/jquery.appear.js"></script>
-        <script src="{{ STATIC_URL }}js/jqury.countTo.js"></script>
-        <script src="{{ STATIC_URL }}js/moment.js"></script>
-        <script src="{{ STATIC_URL }}js/bootstrap-datetimepicker.js"></script>
-        <script src="{{ STATIC_URL }}js/jquery.uniform.min.js"></script>
-        <script src="{{ STATIC_URL }}js/jquery.tablesorter.js"></script>
-        <script src="{{ STATIC_URL }}js/jquery.slimscroll.js"></script>
-        <script src="{{ STATIC_URL }}js/theme_scripts.js"></script>
-{% block scripts %}{% endblock %}
-        <title>{% block pagetitle %}{% endblock %}</title>
-    </head>
-
-    <body>
-        <div class="wrap">
-        <section id="pre-header">
-            <div class="container">
-                <div class="row">
-                    <!-- BEGIN TOP BAR LEFT PART -->
-                    <div class="col-md-6 col-sm-6 additional-info">
-                        <ul>
-                            <li><i class="fa fa-phone"></i><span>+1 907 331 4392</span></li>
-                            <li><i class="fa fa-envelope-o"></i><span>info@mywriters.com</span></li>
-                        </ul>
-                    </div>
-                    <!-- END TOP BAR LEFT PART -->
-                    <!-- BEGIN TOP BAR MENU -->
-                    <div class="col-md-6 col-sm-6 additional-nav">
-                        <ul class="pull-right">
-                            {% if user.username %}  
-                            <li><a href="{% url 'task_list' %}">My Orders</a></li>
-                            <li><a href="{% url 'logout' %}">Exit</a></li>
-                            {% else %}
-                            <li><a href="{% url 'login' %}">Log In</a></li>
-                            <li><a href="{% url 'user_new' %}">Registration</a></li>
-                            {% endif %}
-                       </ul>
-
-                    </div>
-                    <!-- END TOP BAR MENU -->
-                </div>
-            </div>        
-        </section><!--pre-header-->
-
-
-        <header id="header">
+              </div>
+              <!-- END TOP BAR MENU -->
+          </div>
+      </div>
+  </section><!--pre-header-->
+  <header id="header">
             <div class="container">
                 <div id="logo"><a href="/"><img src="{{ STATIC_URL }}images/demo/logo.png"></a></div>
 
@@ -105,4 +101,5 @@
         </header><!--header-->
 {% block content %}
 {% endblock %}
-      
+{#TODO Broke design. Please do something smarter.#}
+{# include 'html/footer.html' #}
