--- a/templates/tasks/customer-tasks.html
+++ b/templates/tasks/customer-tasks.html
@@ -1,152 +1,121 @@
-{% load i18n render_status %}
-<main id="main">
-<div class="container">  
-
-{% include 'html/nav.html' %}
-
-  <!-- BEGIN CONTENT -->
-  <div class="row">
-
-  {% include 'html/sidebar-account.html' %}
-
-    <!-- BEGIN MIDDLE LAYOUT -->
-    <div id="layout-middle" class="col-md-9 col-sm-12 col-xs-12">
-      
-      <h1 class="page-title">My orders</h3>
-
-      <div class="clearfix"></div>
-
-      <!--BEGIN TABS-->
-      <ul class="nav nav-tabs" role="tablist">
-        <li class="active"><a href="#draft" role="tab" data-toggle="tab">Draft (2)</a></li>
-        <li><a href="#processing" role="tab" data-toggle="tab">Processing</a></li>
-        <li><a href="#completed" role="tab" data-toggle="tab">Completed (1)</a></li>
-      </ul>
-      
-      <div class="tab-content">
-        <!-- Begin Details Tab -->
-          <div class="tab-pane active" id="draft">
-          <div class="table-responsive">
-              <table class="table table-striped table-bordered tablesorter">
-                <thead>
-                  <tr>
-                    <th>Order #</th>
-                    <th>Order name</th>
-                    <th>Writter</th>
-                    <th>Created date</th>
-                    <th>Deadline</th>
-                    <th>Revision</th>
-                    <th>Price</th>
-                    <th>Actions</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>1</td>
-                    <td><a href="#">First calculation</a></td>
-                    <td>none</td>
-                    <td>June 25.2014, 3:26 pm</td>
-                    <td>in 2 hours</td>
-                    <td>False</td>
-                    <td>333$<a href="#" class="btn btn-primary btn-xs">Pay now</a></td>
-                    <td align="center">
-                      <a href="#" class="order-action-btn order-search"></a>
-                      <a href="#" class="order-action-btn order-edit"></a>
-                      <a href="#" class="order-action-btn order-remove"></a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>2</td>
-                    <td><a href="#">First calculation</a><a href="#" class="btn btn-primary btn-xs btn-blue"><i class="fa fa-envelope-o"></i> New message</a></td>
-                    <td>none</td>
-                    <td>June 25.2014, 3:26 pm</td>
-                    <td>in 2 hours</td>
-                    <td>False</td>
-                    <td>333$</td>
-                    <td align="center">
-                      <a href="#" class="order-action-btn order-search"></a>
-                      <a href="#" class="order-action-btn order-edit"></a>
-                      <a href="#" class="order-action-btn order-remove"></a>
-                    </td>
-                  </tr>
-                </tbody>
-                <tbody>
-                
-                </tbody>
-              </table>
-          </div>
-          </div><!-- End Details Tab -->
-
-
-
-          <!-- Begin Processing Tab -->
-          <div class="tab-pane" id="processing">
-            Processing content
-          </div><!-- End Processing Tab -->
-
-
-
-          <!-- Begin Completed Tab -->
-          <div class="tab-pane" id="completed">
-            Completed content
-          </div><!-- End Completed Tab -->
+<ul class="nav nav-tabs" role="tablist">
+  <li class="active"><a href="#draft" role="tab" data-toggle="tab">Draft ({{draft_tasks|length}})</a></li>
+  <li><a href="#processing" role="tab" data-toggle="tab">Processing ({{processing_tasks|length}})</a></li>
+  <li><a href="#completed" role="tab" data-toggle="tab">Completed ({{completed_tasks|length}})</a></li>
+</ul>
+{% if tasks %}
+<div class="tab-content">
+   <!-- Begin Details Tab -->
+    <div class="tab-pane active" id="draft">
+     <div class="table-responsive">
+         <table class="table table-striped table-bordered tablesorter">
+           <thead>
+             <tr>
+               <th>Order #</th>
+               <th>Order name</th>
+               <th>Writer</th>
+               <th>Created date</th>
+               <th>Deadline</th>
+               <th>Revision</th>
+               <th>Price</th>
+               <th>Actions</th>
+             </tr>
+           </thead>
+           <tbody>
+             {% for draft in draft_tasks %}
+             <tr>
+               <td>{{draft.id}}</td>
+               <td><a href="{% url 'task_view' draft.id %}">{{draft.paper_title}}</a></td>
+               <td>{% if draft.assignee %}{{draft.assignee}}{% endif %}</td>
+               <td>{{draft.created}}</td>
+               <td class="momdl">{{draft.admin_deadline}}</td>
+               <td>{{draft.review}}</td>
+               <td>{{draft.get_price}} <a href="#" class="btn btn-primary btn-xs">Pay now</a></td>
+               <td align="center">
+                 <a href="#" class="order-action-btn order-search"></a>
+                 <a href="#" class="order-action-btn order-edit"></a>
+                 <a href="#" class="order-action-btn order-remove"></a>
+               </td>
+             </tr>
+             {% endfor %}
+           </tbody>
+         </table>
+     </div>
+    </div><!--End Details Tab -->
+    <!-- Begin Processing Tab -->
+    <div class="tab-pane" id="processing">
+      <div class="table-responsive">
+          <table class="table table-striped table-bordered tablesorter">
+            <thead>
+              <tr>
+                <th>Order #</th>
+                <th>Order name</th>
+                <th>Writer</th>
+                <th>Created date</th>
+                <th>Deadline</th>
+                <th>Revision</th>
+                <th>Price</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for proc in processing_tasks %}
+              <tr>
+                <td>{{proc.id}}</td>
+                <td><a href="{% url 'task_view' proc.id %}">{{proc.paper_title}}</a></td>
+                <td>{% if proc.assignee %}{{proc.assignee}}{% endif %}</td>
+                <td>{{proc.created}}</td>
+                <td class="momdl">{{proc.admin_deadline}}</td>
+                <td>{{proc.review}}</td>
+                <td>{{proc.get_price}}</td>
+                <td align="center">
+                  <a href="#" class="order-action-btn order-search"></a>
+                  <a href="#" class="order-action-btn order-edit"></a>
+                  <a href="#" class="order-action-btn order-remove"></a>
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+      </div>
+    </div><!-- End Processing Tab -->
+    <!-- Begin Completed Tab -->
+    <div class="tab-pane" id="completed">
+        <div class="table-responsive">
+          <table class="table table-striped table-bordered tablesorter">
+            <thead>
+              <tr>
+                <th>Order #</th>
+                <th>Order name</th>
+                <th>Writer</th>
+                <th>Created date</th>
+                <th>Deadline</th>
+                <th>Revision</th>
+                <th>Price</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for proc in completed_tasks %}
+              <tr>
+                <td>{{proc.id}}</td>
+                <td><a href="{% url 'task_view' proc.id %}">{{proc.paper_title}}</a></td>
+                <td>{% if proc.assignee %}{{proc.assignee}}{% endif %}</td>
+                <td>{{proc.created}}</td>
+                <td class="momdl">{{proc.admin_deadline}}</td>
+                <td>{{proc.review}}</td>
+                <td>{{proc.get_price}}</td>
+                <td align="center">
+                  <a href="#" class="order-action-btn order-search"></a>
+                  <a href="#" class="order-action-btn order-edit"></a>
+                  <a href="#" class="order-action-btn order-remove"></a>
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
         </div>
-      <!--END TABS-->
-
-    </div>
-    <!-- END MIDDLE LAYOUT -->
-  </div>
-  <!-- END CONTENT -->
-</div>    
-</main>
-
-
-
-
-
-
-
-
-
-{% comment %}
-<thead>
-    <tr>
-        <th class="sorter-digit">{% trans 'ID' %}</th>
-        <th class="sorter-text">{% trans 'Order name' %}</th>
-        <th class="sorter-text">{% trans 'Assigment' %}</th>
-        <th class="sorter-status">{% trans 'Status' %}</th>
-        <th class="sorter-text">{% trans 'Writer' %}</th>
-        <th>{% trans 'Created' %}</th>
-        <th class="sorter-text">{% trans 'Urgency' %}</th>
-        <th class="sorter-text">{% trans 'Deadline' %}</th>
-        <th class="sorter-text">{% trans 'Revision' %}</th>
-        <th class="sorter-text">{% trans 'Status' %}</th>
-        <th class="sorter-text">{% trans 'Price' %}</th>
-    </tr>
-</thead>
-<tbody>
-    {% for task in tasks %}
-    <tr>
-        <td>{{task.id}}</td>
-        <td><a href="{% url 'task_view' task.id %}">{{task.paper_title}}</a></td>
-        <td>{{task.get_assigment}}</td>
-        <td data-status="{% if task.status == co.SENT %}{{co.PROCESSING}}{% else %}{{task.status}}{% endif %}"
-            style="font-size:1.4em;line-height:100%">
-          {% if task.status == co.SENT %}{{co.PROCESSING|render_status}}{% else %}{{task.status|render_status}}{% endif %}
-        </td>
-        <td>{% if task.assignee %}{{task.assignee}}{% endif %}</td>
-        <td>{{task.created}}</td>
-        <td>{{task.get_urgency}}</td>
-        <td class="momdl">{{task.admin_deadline}}</td>
-        <td>{{task.review}}</td>
-        {% with payments|dget:task.id as p %}
-        <td>{{p.0|default:'Unpaid'}}</td>
-        {% endwith %}
-        <td>{{task.get_price}}$</td>
-    </tr>
-    {% endfor %}
-</tbody>
-<tfoot>
-    <tr></tr>
-</tfoot>
-{% endcomment %}
+    </div><!-- End Completed Tab -->
+</div>
+<!--END TABS-->
+{% endif %}
