--- a/templates/tasks/index.html
+++ b/templates/tasks/index.html
@@ -1,30 +1,24 @@
 {% extends "html/header.html" %}
 {% load i18n %}
 {% block pagetitle %}Orders{% endblock %}
-{% block info_block %}
-<section class="info">
-    <h2><i class="fa fa-tasks irm"></i> {% trans "Tasks List" %} <small style="color:#333;margin-left:0.5em">{{action_label}} <sup><span class="badge" style="font-size:.6em;text-shadow:none;margin-left:.5em;background-color:#08F">{{tasks|length}}</span></sup></small></h2>
-</section>
-{% endblock %}
 {% block content %}
 <main id="main">
-    <div class="container">
-
-{% if tasks %}
-<div class="row">
-    {{ PATH_IFNO }}
+  <div class="container">
+  {% include 'html/nav.html' %}
+  <div class="row">
     <div class="col-md-12">
-        <table class="tablesorter tablesorter-default table table-hover table-condensed">
-            {% with "tasks/"|add:site|add:"-tasks.html" as template %}
-            {% include template %}
-            {% endwith %}
-        </table>
+      <div class="row">
+        {% include 'html/sidebar-account.html' %}
+        <div id="layout-middle" class="col-md-9 col-sm-12 col-xs-12">
+          <h1 class="page-title">My orders</h3>
+          <div class="clearfix"></div>
+          {% include "tasks/customer-tasks.html" %}
+        </div>
+      </div>
     </div>
-</div>
-{% endif  %}
-    </div>
+  </div>
+  </div>
 </main>
-{% include 'html/footer.html' %}
 {% endblock %}
 {% block scripts %}
 <script src="{{ STATIC_URL }}js/lib/jquery.sprintf.min.js" type="text/javascript"></script>
@@ -37,4 +31,5 @@
 {% block styles %}
 <link rel="stylesheet" href="{{ STATIC_URL }}css/theme.default.css" type="text/css">
 {% endblock %}
-
+{#TODO Add pay button, edit, delete, preview.#}
+{#TODO Ask for create new order.#}
