--- a/templates/404.html
+++ b/templates/404.html
@@ -1,1 +1,47 @@
-<h1>Hello world fro ==</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+  <meta charset="utf-8">
+  <meta http-equiv="Cache-Control" content="no-cache">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
+  <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet" media="screen">
+  <link href="{{ STATIC_URL }}css/font-awesome.css" rel="stylesheet" media="screen">
+  <link href="{{ STATIC_URL }}css/settings.css" rel="stylesheet" media="screen">
+  <link href="{{ STATIC_URL }}css/owl.carousel.css" rel="stylesheet" media="screen">
+  <link href="{{ STATIC_URL }}css/owl.theme.css" rel="stylesheet" media="screen">
+  <link href="{{ STATIC_URL }}css/uniform.default.css" rel="stylesheet" media="screen">
+  <link href="{{ STATIC_URL }}css/theme.default.css" rel="stylesheet" media="screen">
+  <link href="{{ STATIC_URL }}css/style.css?v=6" rel="stylesheet" media="screen">
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="{{ STATIC_URL }}js/bootstrap.js"></script>
+  <script src="{{ STATIC_URL }}js/jquery.themepunch.plugins.min.js"></script>
+  <script src="{{ STATIC_URL }}js/jquery.themepunch.revolution.min.js"></script>
+  <script src="{{ STATIC_URL }}js/revo-slider-init.js"></script>
+  <script src="{{ STATIC_URL }}js/owl.carousel.min.js"></script>
+  <script src="{{ STATIC_URL }}js/jquery.appear.js"></script>
+  <script src="{{ STATIC_URL }}js/jqury.countTo.js"></script>
+  <script src="{{ STATIC_URL }}js/moment.js"></script>
+  <script src="{{ STATIC_URL }}js/bootstrap-datetimepicker.js"></script>
+  <script src="{{ STATIC_URL }}js/jquery.uniform.min.js"></script>
+  <script src="{{ STATIC_URL }}js/jquery.tablesorter.js"></script>
+  <script src="{{ STATIC_URL }}js/jquery.slimscroll.js"></script>
+  <script src="{{ STATIC_URL }}js/theme_scripts.js"></script>
+
+  {% block page_title %}<title>Index</title>{% endblock %}
+</head>
+  <body>
+    <div class="wrap">
+	{% include 'html/header.html' %}
+    {% block content %}
+      404
+    {% endblock %}
+    </div>
+    {% include 'html/footer.html' %}
+  </body>
+</html>
